# Factorial

./: CMakeLists.txt  README.md
include/: verylong.h
src/: main.cpp  verylong.cpp
